# customer-churn-ai

./: .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: feature_importance.py  model_metadata.py  predict.py
backend/app/core/: __init__.py  model_registry.py
backend/app/ml/: __init__.py  model_loader.py
backend/app/schemas/: __init__.py  churn.py  model_metadata.py
backend/app/services/: __init__.py  feature_importance_service.py  prediction_service.py
ml/: ml_read.md  train.py
ml/notebooks/: 01_eda.ipynb  churn_pipeline.pkl
ml/training/: __init__.py  artifacts_saver.py  build_metadata.py  build_pipeline.py  comparison.py  data_loader.py  evaluation.py  feature_types.py  metadata_saver.py  model_saver.py  preprocessing.py  splitter.py  threshold.py
